Complete intial deploy process

--- a/src/main/resources/templates/createGig.html
+++ b/src/main/resources/templates/createGig.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="includes :: indexHead"></head>
-<body>
+<body class="blue-grey lighten-5">
 <div th:include="navbar :: navHome"></div>
 
 <main class="container" th:inline="text">
@@ -25,8 +25,8 @@
             </div>
 
             <div class="input-field col s3">
-                <input type="text" name="locationZip" maxlength="5" minlength="5"/>
-                <label for="">Zip Code</label>
+                <input id="zip" type="text" name="locationZip" maxlength="5" minlength="5"/>
+                <label for="zip">Zip Code</label>
             </div>
 
         </div>
@@ -55,17 +55,7 @@
 
             </div>
         </div>
-        <!--<div class="row">-->
-            <!--<div class="file-field input-field">-->
-                <!--<div class="btn">-->
-                    <!--<span>File</span>-->
-                    <!--<input type="file">-->
-                <!--</div>-->
-                <!--<div class="file-path-wrapper">-->
-                    <!--<input class="file-path validate" type="text" th:field="*{gigArt}" placeholder="Choose Profile Image">-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
+
         <button class="waves-effect waves-light btn" type="submit" >Create Gig</button>
 
     </form>
