--- a/src/main/resources/static/assets/css/styles.css
+++ b/src/main/resources/static/assets/css/styles.css
@@ -1,20 +1,57 @@
+.nav-wrapper{
+    margin: auto 5vw;
+}
+#dropdown1 li{
+    width: 140px;
+
+}
+#dropdown1{
+    margin-top: 64px;
+    margin-left: -22px;
+}
 .tabs .indicator {
     text-decoration: none;
     background-color: red !important; }
 #logo{
-    font-size: 5em;
+    font-size: 6.8em;
 }
 .top{
 
     background-image: url("/assets/images/microphone_wallpaper copy.jpg");
-
     background-repeat: no-repeat;
     background-size: cover;
     height: 100vh;
 }
+
 .brand-logo{
     font-family: 'Great Vibes', cursive;
     margin-left: 15px;
+}
+.loginLogo{
+    font-family: 'Great Vibes', cursive;
+
+}
+.downArrow{
+    position: absolute;
+    font-size: 5em;
+    left: 50%;
+    bottom: 0px;
+}
+#choiceSection{
+    background: #2B3989; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(#200102, #2B3989); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#200102, #2B3989); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#200102, #2B3989); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#200102, #2B3989); /* Standard syntax */
+    margin: 0;
+}
+.choice{
+    padding: 20px 0;
+    margin: 0px 5vw;
+
+}
+.choice .row{
+    margin-bottom: 0;
 }
 .login{
     background: url("/assets/images/pexelsJazz.jpeg");
@@ -24,6 +61,11 @@
     background-size: cover;
     height: 100vh;
 }
+.loginCard{
+    margin-top: 70px;
+    width: 350px;
+}
+
 .loginForm{
 
 background: rgba(255,255,255,0.5);
@@ -72,4 +114,117 @@ background: rgba(255,255,255,0.5);
 }
 .name{
     text-transform: uppercase;
+}
+.coverBanner{
+    color: rgba(253, 109, 34, 0.75);
+    font-size: 2em;
+    margin-left: 20px;
+    margin-top: 10px;
+    background-color: rgba(56, 56, 56, 0.88);
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    border: 1px solid lightgray;
+}
+.coverBanner:hover{
+    color: #FD6D22;
+}
+.picParentDetail{
+    position: absolute;
+    width: 250px;
+    border: 2px solid lightgray;
+    border-radius: 50%;
+    top: 170px;
+    left: 50px;
+}
+#picParent{
+    position: absolute;
+    width: 250px;
+    border: 2px solid lightgray;
+    border-radius: 50%;
+    top: 170px;
+    left: 50px;
+}
+.profPic{
+    opacity: 1;
+    display: block;
+    width: 100%;
+    height: auto;
+    transition: .5s ease;
+    backface-visibility: hidden;
+}
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%)
+}
+#picParent:hover .profPic {
+    opacity: 0.8;
+}
+
+#picParent:hover .middle {
+    opacity: 1;
+}
+#hover-content{
+    background-color: rgba(48, 48, 48, 0.91);
+    color: white;
+    font-size: 16px;
+    border-radius: 5px;
+    width: 160%;
+    text-align: center;
+    margin-left: -27px;
+}
+.musicInfo{
+    position: relative;
+    top: 80px;
+
+}
+.musicRow{
+    font-size: 1.2em;
+}
+
+.profileBanner{
+    height: 250px;
+
+}
+
+.profileDetails{
+    margin: auto 5vw;
+}
+.bannerBio{
+    position: absolute;
+    background-color: rgba(48, 48, 48, 0.91);
+    border-radius: 5px;
+    border: 1px solid #000;
+    top: 110px;
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 30vw;
+}
+.mediaTitle{
+    font-size: 1.3em;
+}
+body {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+main {
+    flex: 1 0 auto;
+}
+.gigDetails{
+    margin-top: 5px;
+    margin-bottom: 0;
+}
+.map{
+    position: fixed;
 }
