--- a/src/main/resources/templates/companyProfile.html
+++ b/src/main/resources/templates/companyProfile.html
@@ -2,74 +2,109 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="includes :: indexHead"></head>
-<body>
+<body class="blue-grey lighten-5">
 <div th:include="navbar :: navHome"></div>
-<nav class=" blue darken-2 center-align">
-    <a class="btn waves-effect waves-light" href="/company/search/">Search</a>
-    <a th:href="@{/company/create-gig/}" class="waves-effect waves-light btn">Create Gig</a>
-
-</nav>
 <main class="" th:inline="text">
-    <section class=" blue darken-2 profile">
-        <div class="row">
-            <div class=" col l2"><img class="circle responsive-img" th:src="@{../assets/images/pexels-guitar.jpeg}" alt=""/></div>
-            <div class="col l2">
-                <h5 class="name white-text black" th:text="${companyProfile.companyContactFirstName} +' '+ ${companyProfile.companyContactLastName}"></h5>
-
-            </div>
-            <div class="col l2">
-                <p class="black white-text"><i class="orange-text text-accent-4 material-icons">account_circle</i> [[${user.username}]]</p>
-                <p class="black white-text"><i class="orange-text text-accent-4 material-icons">business_center</i> [[${companyProfile.companyName}]]</p>
-            </div>
-            <div class="col l2">
-                <p class="black white-text"><i class="orange-text text-accent-4 material-icons">email</i> [[${companyProfile.email}]]</p>
-                <p class="black white-text"><i class="orange-text text-accent-4 material-icons">local_phone</i> [[${companyProfile.phoneNumber}]]</p>
+    <section class="blue darken-2 profileBanner" th:style="'background:url('+ @{${companyProfile.companyCoverPic}}+'); background-size: cover; background-repeat: no-repeat; background-position: center;'">
+        <a href="#coverCompanyPic" class="modal-trigger tooltipped" data-position="right" data-delay="50" data-tooltip="Update Cover Image"><i class="coverBanner text-accent-4 material-icons">camera_alt</i></a>
+        <div class="white-text center-align bannerBio ">
+            <h4  th:text="${companyProfile.companyContactFirstName} +' '+ ${companyProfile.companyContactLastName}"></h4>
+            <h5> [[${companyProfile.companyName}]]</h5>
+        </div>
+        <div  id="picParent">
+            <img class="profPic circle z-depth-5 responsive-img" th:src="@{${companyProfile.companyProfPic}}" th:alt="${user.username}"/>
+            <div class="middle">
+                <div  id="hover-content">
+                    <a href="#profCompanyPic" class=" modal-trigger"><i class=" orange-text text-accent-4 material-icons bannerEdit">edit</i><br/><span class="profMessage white-text">Update Profile Image</span>
+                    </a>
+                </div>
             </div>
 
         </div>
     </section>
-    <div class="musicProfile">
-        <div class="row">
-            <div class="col s3">
+    <div class="row bioRow black white-text">
+        <div class="col s3 offset-l3">
+            <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">account_circle</i> [[${user.username}]]</p>
+            <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">location_on</i> [[${companyProfile.companyLocation}]]</p>
 
-
-
-            </div>
         </div>
-    <div class="divider"></div>
-    <div>
+        <div class="col s3">
+            <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">email</i> [[${companyProfile.email}]]</p>
+            <p class="valign-wrapper"><i class="orange-text text-accent-4 material-icons">local_phone</i> [[${companyProfile.phoneNumber}]]</p>
+
+        </div>
+
+    </div>
+    <section class="profileDetails">
         <div class="row">
+            <div class="col m6 s12">
+                <h4>Your Gigs
+                    <span>
+        <a th:href="@{/company/create-gig/}" class="waves-effect waves-light btn-floating tooltipped" data-position="top" data-delay="50" data-tooltip="Create a Gig">
+            <i class="material-icons">add</i>
+        </a>
 
-        <div th:each="gig : ${gig}">
-            <div th:if="${gig == null}">
-                <h1>No Gigs</h1>
-            </div>
-                <div class="col s4 m4">
-                    <div class="card small  blue darken-2">
-                        <div class="card-content white-text">
-                            <span class="card-title">[[${gig.gigDescription}]]</span>
+        </span>
+                </h4>
+                <div th:each="gig : ${gig}">
+                    <div th:if="${gig == null}">
+                        <h1>No Gigs</h1>
+                    </div>
+                    <div class="col s12 m6">
+                        <div class="card small blue darken-2">
+                            <div class="card-content white-text">
+                                <span class="card-title">[[${gig.gigDescription}]]</span>
+                                <p>Time: [[${gig.gigStart}]] - [[${gig.gigEnd}]]</p>
+                                <p >[[${gig.gigType}]]</p>
+                                <p >[[${gig.gigLocation}]]</p>
 
-                            <p>Time: [[${gig.gigStart}]] - [[${gig.gigEnd}]]</p>
-                            <p >[[${gig.gigType}]]</p>
-                            <p >[[${gig.gigLocation}]]</p>
-
-                                <h1>[[${applied}]]</h1>
-
+                            </div>
+                            <div class="card-action center-align">
+                                <div class="row ">
+                                    <a class="waves-effect waves-light btn " th:href="'/company/gig/' + @{${gig.id}}">Musicians Applied [[${gig.getMusicianApplyGigs().size()}]]</a>
+                                </div>
+                            </div>
                         </div>
-                        <div class="card-action">
-                            <div class="row">
-                                <a class="waves-effect waves-light btn" th:href="'/company/gig/' + @{${gig.id}}">Details</a>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col s12 m6">
+                <h4>Musicians in the Area
+                    <span>
+                    <a class="btn-floating waves-effect waves-light tooltipped" data-position="top" data-delay="50" data-tooltip="Search Musicians" href="/company/search/"><i class="material-icons">search</i></a>
+                </span>
+                </h4>
+                <div  th:each="musician : ${musician}">
+                    <div class="col s12 m6">
+                        <div class="card medium">
+                            <div class="card-image">
+                                <img th:src="@{${musician.profPicImage}} "/>
+                            </div>
+                            <div class="card-content center-align">
+                                <span class="card-title" th:text="${musician.firstName} +' '+ ${musician.lastName}"></span>
+                                <p class="" th:text="${musician.musicianInstruments}"></p>
+                            </div>
+                            <div class="card-action center-align">
+                                <a th:href="'/home/find-bands/' + @{${musician.id}}" class="btn  waves-effect waves-light">Go To Profile</a>
+
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            </div>
 
-        </div>
 
-    </div>
-        </div>
+    </section>
+
+
+
+
 </main>
+<div th:include="modals :: coverCompanyPic"></div>
+<div th:include="modals :: profCompanyPic"></div>
+
 <div th:include="footer :: footer"></div>
 <div th:include="modals :: companyProfileUpdate"></div>
 <span th:include="includes :: js"></span>
