--- a/src/main/resources/templates/createCompany.html
+++ b/src/main/resources/templates/createCompany.html
@@ -2,11 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="includes :: indexHead"></head>
-<body>
+<body class="blue-grey lighten-5">
 <div th:include="navbar :: navHome"></div>
 
 <main class="container">
-    <form th:action="@{/signup/company/}" method="post" enctype="multipart/form-data">
+    <form th:action="@{/signup/company/}" method="post">
         <div th:object="${user}">
             <div class="row">
                 <div class="input-field col s12">
@@ -42,6 +42,18 @@
                 </div>
             </div>
             <div class="row">
+                <div class="input-field col l6">
+                    <input id="city" type="text" name="companyCity"/>
+                    <label for="city">City</label>
+                </div>
+                <div class="input-field col l3">
+                    <select name="companyState" id="state">
+                        <option value="" disabled="disabled" selected="selected">State</option>
+                        <option th:each="states : ${states}" th:value="${states.abbreviation}">[[${states.name}]] - [[${states.abbreviation}]]</option>
+                    </select>
+                </div>
+            </div>
+            <div class="row">
                 <div class="input-field col s6">
                     <label for="pNumber">Contact Phone Number</label>
                     <input id="pNumber" type="text" th:field="*{phoneNumber}"/>
@@ -51,17 +63,7 @@
                     <input id="email" type="email" th:field="*{email}"/>
                 </div>
             </div>
-            <!--<div class="row">-->
-                <!--<div class="file-field input-field">-->
-                    <!--<div class="btn">-->
-                        <!--<span>File</span>-->
-                        <!--<input type="file">-->
-                    <!--</div>-->
-                    <!--<div class="file-path-wrapper">-->
-                        <!--<input class="file-path validate" type="text" th:field="*{companyPic}" placeholder="Choose Profile Image">-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
+
         </div>
 
         <button class="waves-effect waves-light btn" type="submit" >Create Profile</button>
