--- a/src/main/resources/templates/findBands.html
+++ b/src/main/resources/templates/findBands.html
@@ -2,24 +2,30 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:include="includes :: indexHead"></head>
-<body>
+<body class="blue-grey lighten-5">
 <div th:include="navbar :: navHome"></div>
 <main class="container">
+    <h1>Find Musicians</h1>
+    <div class="divider"></div>
     <div class="row">
         <div th:each="musician : ${musicians}">
 
 
-            <div class="col s12 m4">
-                <div class="card">
-                    <div class="card-image">
-                        <img src="images/sample-1.jpg"/>
-                        <a th:href="'/home/find-bands/' + @{${musician.id}}" class="btn-floating  halfway-fab waves-effect waves-light"><i class="material-icons">person</i></a>
-                    </div>
-                    <div class="card-content center-align">
-                        <span class="card-title" th:text="${musician.firstName} +' '+ ${musician.lastName}"></span>
-                        <p class="circle" th:text="${musician.musicianInstruments}"></p>
-                    </div>
+            <div  th:each="musician : ${musician}">
+                <div class="col s12 m4">
+                    <div class="card medium">
+                        <div class="card-image">
+                            <img th:src="@{${musician.profPicImage}}"/>
+                        </div>
+                        <div class="card-content center-align">
+                            <span class="card-title" th:text="${musician.firstName} +' '+ ${musician.lastName}"></span>
+                            <p class="circle" th:text="${musician.musicianInstruments}"></p>
+                        </div>
+                        <div class="card-action center-align">
+                            <a th:href="'/home/find-bands/' + @{${musician.id}}" class="btn  waves-effect waves-light">Go To Profile</a>
 
+                        </div>
+                    </div>
                 </div>
             </div>
 
